confusion matrix started

--- a/Capstone Code.ipynb
+++ b/Capstone Code.ipynb
@@ -40,6 +40,7 @@
     "from sklearn.decomposition import PCA\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
+    "\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPooling2D\n",
     "from tensorflow.keras.utils import to_categorical\n",
@@ -4268,6 +4269,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Model Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Count Vectorizer"
    ]
   },
@@ -5027,13 +5035,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Modeling"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1011,
    "metadata": {},
@@ -5047,7 +5048,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Baseline"
+    "# Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Baseline"
    ]
   },
   {
@@ -5877,6 +5885,177 @@
    "source": [
     "# Model Evaluation"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1235,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X_text_df.drop(columns = ['next_inspection_score', 'next_inspection_grade']) #predictive variable\n",
+    "y = X_text_df['next_inspection_grade']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y,\n",
+    "                                                    random_state = 63, stratify = y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1237,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = logreg1.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1258,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actual_v_preds = pd.DataFrame(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1259,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actual_v_preds['preds'] = y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1270,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actual_v_preds.rename(\n",
+    "    columns = {'next_inspection_grade' : 'actual'}, inplace = True)\n",
+    "\n",
+    "actual_v_preds['actual'].replace({4 : 'A', 3: 'B', 2: 'C', 1: 'D', 0: 'F'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1274,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    4294\n",
+       "B    2484\n",
+       "C     275\n",
+       "D      56\n",
+       "F       3\n",
+       "Name: actual, dtype: int64"
+      ]
+     },
+     "execution_count": 1274,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actual_v_preds['actual'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1276,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    3744\n",
+       "B     550\n",
+       "Name: preds, dtype: int64"
+      ]
+     },
+     "execution_count": 1276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actual_v_preds.loc[actual_v_preds['actual'] == 'A']['preds'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1278,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    1290\n",
+       "B    1190\n",
+       "C       4\n",
+       "Name: preds, dtype: int64"
+      ]
+     },
+     "execution_count": 1278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actual_v_preds.loc[actual_v_preds['actual'] == 'B']['preds'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
