finished coef eval

--- a/code/Capstone Code.ipynb
+++ b/code/Capstone Code.ipynb
@@ -4243,8 +4243,7 @@
     "gsnb = GridSearchCV(pipe,\n",
     "                 param_grid = pipe_params,\n",
     "                 cv = 5,\n",
-    "                 scoring = 'accuracy',\n",
-    "                 verbose = 2 # let's get progress updates in real time this time\n",
+    "                 scoring = 'accuracy'\n",
     "                   )\n",
     "\n",
     "mnb_fit = gsnb.fit(X_train, y_train)"
@@ -4345,8 +4344,7 @@
     "gslrpca = GridSearchCV(pipe,\n",
     "                 param_grid = pipe_params,\n",
     "                 cv = 3,\n",
-    "                 scoring = 'accuracy',\n",
-    "                 verbose = 2 # let's get progress updates in real time this time\n",
+    "                 scoring = 'accuracy'\n",
     "                   )\n",
     "\n",
     "\n",
@@ -4462,8 +4460,7 @@
     "gsdtpca = GridSearchCV(pipe,\n",
     "                 param_grid = pipe_params,\n",
     "                 cv = 3,\n",
-    "                 scoring = 'accuracy',\n",
-    "                 verbose = 2 # let's get progress updates in real time this time\n",
+    "                 scoring = 'accuracy'\n",
     "                   )\n",
     "\n",
     "\n",
@@ -5067,87 +5064,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Ridge penalty did reduce our coefficient values, but calculated_score in relation to predicting A is the strongest coefficient in the entirety of the data.  A one unit increase of calculated score resulted in a document to classified as A."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 456,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>coefficient_B</th>\n",
-       "      <th>odds_B</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>walls</th>\n",
-       "      <td>0.769392</td>\n",
-       "      <td>2.158453</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>replace</th>\n",
-       "      <td>0.750669</td>\n",
-       "      <td>2.118417</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>criteria</th>\n",
-       "      <td>0.669006</td>\n",
-       "      <td>1.952297</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>fy2019</th>\n",
-       "      <td>0.666853</td>\n",
-       "      <td>1.948097</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>kitchen</th>\n",
-       "      <td>0.618624</td>\n",
-       "      <td>1.856372</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          coefficient_B    odds_B\n",
-       "walls          0.769392  2.158453\n",
-       "replace        0.750669  2.118417\n",
-       "criteria       0.669006  1.952297\n",
-       "fy2019         0.666853  1.948097\n",
-       "kitchen        0.618624  1.856372"
-      ]
-     },
-     "execution_count": 456,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "coef_df.sort_values(by = 'odds_B', ascending=False).head()[['coefficient_B', 'odds_B']]"
+    "The Ridge penalty did reduce our coefficient values, but calculated_score in relation to predicting A is the strongest coefficient in the entirety of the data.  This comes as no surprise since this was also our strongest positive correlation during EDA (the linear relationship between calculated score and the future inspection score). A one unit increase of calculated score meant that a row was 23.48 times more likely to be classified as A."
    ]
   },
   {
@@ -5233,6 +5150,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we look at what is likely to not be classified as A, the feature 228 seems peculiar at first, but further research showed that all violations are classified as 228.something .  With that context, it makes sense that a 1 unit increase in 228 meant that a row was 5.803 times more liekly to not be classified as A."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 456,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>coefficient_B</th>\n",
+       "      <th>odds_B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>walls</th>\n",
+       "      <td>0.769392</td>\n",
+       "      <td>2.158453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>replace</th>\n",
+       "      <td>0.750669</td>\n",
+       "      <td>2.118417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>criteria</th>\n",
+       "      <td>0.669006</td>\n",
+       "      <td>1.952297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fy2019</th>\n",
+       "      <td>0.666853</td>\n",
+       "      <td>1.948097</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>kitchen</th>\n",
+       "      <td>0.618624</td>\n",
+       "      <td>1.856372</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          coefficient_B    odds_B\n",
+       "walls          0.769392  2.158453\n",
+       "replace        0.750669  2.118417\n",
+       "criteria       0.669006  1.952297\n",
+       "fy2019         0.666853  1.948097\n",
+       "kitchen        0.618624  1.856372"
+      ]
+     },
+     "execution_count": 456,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coef_df.sort_values(by = 'odds_B', ascending=False).head()[['coefficient_B', 'odds_B']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When looking at these coefficients, we see that these coefficients aren't as strong as what we see for A.  This makes sense because A and F are the extremities.  The words walls and replace seem to imply that while B restaurants had violations, they most likely were violations related to the actual building of the restaurant and not as much in the way of food preparation and handling (as a word like raw or food would imply).  The other interesting coefficient here is that a one unit increase of fy2019 (an inspection taking place during the 2019 fiscal year) meant that a row was 1.95 times more likely to be classified as B.  I would be curious to research if certain scoring criteria or staff changed, as well as any events occuring that may turn a previous A or C into a B."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 458,
    "metadata": {},
@@ -5315,6 +5326,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These coefficients strangely reinforce the fiscal year when it came to a row being classified as B.  A one unit increase of 2018 fy2018 (an inspection taking place during the fiscal year of 2018) meant that a place was 2.13 time more likely to not be classified as B."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 473,
    "metadata": {},
@@ -5390,6 +5408,13 @@
    ],
    "source": [
     "coef_df.sort_values(by = 'odds_C', ascending=False).head()[['coefficient_C', 'odds_C']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start to see words, such as food, drain, and 228, that would further indicate the presence of violations when it comes to classifying a row as C.  This time, 228 appears here as a positive coefficient, meaning that for a one unit increase in 228, a row is 2.34 times more likely to be classified as C."
    ]
   },
   {
@@ -5475,6 +5500,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar to the A coefficients, we see that calculated score appears again, but this time as a negative coefficient.  For every one unit increase in calculated score, a row is 5.241 times less likely to be classified as C. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 474,
    "metadata": {},
@@ -5550,6 +5582,13 @@
    ],
    "source": [
     "coef_df.sort_values(by = 'odds_D', ascending=False).head()[['coefficient_D', 'odds_D']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While we see food and 228 appear in D, just like they did in C, the coefficients are smaller for D.  This doesn't mean that these terms are necessarily less prevalent in D restaurants.  This is most likely due to the imbalanced classes.  Since our model did not make any D predictions, it supports that these features would more likely result in a C prediction instead of a D prediction.  We do see the terms cooling and raw appear in the top 5, which understandably is troublesome."
    ]
   },
   {
@@ -5635,6 +5674,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A word like clean is understandably not as likely going to refer to a D-grade restaurant.  Once again, we actually see calculated score as a weaker coefficient in not predicting a D compared to not predicting a C.  This is once again likely due to our imbalanced classes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 475,
    "metadata": {},
@@ -5710,6 +5756,13 @@
    ],
    "source": [
     "coef_df.sort_values(by = 'odds_F', ascending=False).head()[['coefficient_F', 'odds_F']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When it comes to classifying a row as F, all of these terms relate to filthiness.  For a one unit increase in \"waste\" appearing as a feature, we see that a restaurant is 1.18 times more likely to be classified as F.  While I would assume the coefficient would be greater before seeing this result, I bear in mind that our test data only contained three actual F scores, so most rows were very unlikely to be classified as F to begin with."
    ]
   },
   {
@@ -5795,6 +5848,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Days since last inspection and calculated score already had positive correlations with future score, so it's not surprising to see that an increase in those variables lead to a decreased likelihood of classifying a row as F.  Hair strangely stands out to me here because for a one unit increase in \"hair,\" a row was 1.089 times LESS likely to be classified as F, which sounds strange, Inspectors are likely referring to hair in the sense that it is being properly covered instead of \"finding hair.\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 463,
    "metadata": {},
@@ -5838,69 +5898,6 @@
    ],
    "source": [
     "np.exp(abs(coef_df['coefficient_A'].sort_values().tail()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.exp(abs(coef_df['coefficient_B'].sort_values().tail()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.exp(abs(coef_df['coefficient_C'].sort_values().head()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.exp(abs(coef_df['coefficient_'].sort_values().tail()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.exp(abs(coef_df['coefficient_D'].sort_values().head()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.exp(abs(coef_df['D'].sort_values().tail()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.exp(abs(coef_df['F'].sort_values().head()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.exp(abs(coef_df['F'].sort_values().tail()))"
    ]
   },
   {
@@ -5983,34 +5980,6 @@
     "\n",
     "Bootstrapping could be a helpful technique to try for tree-based models, but running multiple bootstrapped samples of the data would also be very time intensive given our processing power constraint."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
